Fixed biography spacing

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
 }
 .biography-card {
   flex: 0 0 100%;
-  height: 300px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -180,22 +180,28 @@ body {
 }
 .biography-cards-holder {
   position: relative;
-  margin: 0 auto;
-  max-width: 800px;
+  height: 100%;
+  max-height: 100%;
+  max-width: 90%;
   overflow: hidden;
 }
 .biography-cards-slider {
+  height: 100%;
   display: flex;
   transition: transform 0.3s ease-in-out;
 }
-.biography-links {
+.biography-aside {
   width: 20%;
+  height: 100%;
   border-left: 2px solid black;
+  font-size: medium;
 }
 .biography-header-and-column-wrapper {
   display: flex;
   flex-direction: column;
   width: 80%;
+  height: 100%;
+  padding-top: 2px;
 }
 .biography-header {
   border-bottom: 2px solid black;
@@ -233,6 +239,9 @@ body {
   background-color: black;
   z-index: 1000;
   color: white;
+}
+ul li {
+  margin-bottom: 4px;
 }
 @keyframes drive {
   0% {
